--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 		"gulp-zip": "*",
 		"run-sequence": "*"
 	},
+	"devDependencies": {
+		"lodash.template": ">=4.5.0"
+	},
 	"scripts": {
 		"start": "./node_modules/.bin/gulp",
 		"docs": "rm -rf docs && ./node_modules/.bin/gulp docs",
